--- a/index.hbs
+++ b/index.hbs
@@ -40,10 +40,10 @@
               </span>   
             </div>
             <div class="card-footer d-flex justify-content-end flex-wrap">
-              <a href="/restaurants/{{this._id}}/edit"><button class="btn btn-link btn-sm">Edit</button></a>
-              <a href="/restaurants/{{this._id}}"><button class="btn btn-link btn-sm">Details</button></a>
+              <a href="/restaurants/{{this._id}}/edit"><button class="btn btn-secondary btn-sm m-1">Edit</button></a>
+              <a href="/restaurants/{{this._id}}"><button class="btn btn-info btn-sm m-1">Details</button></a>
               <form action="/restaurants/{{this._id}}?_method=DELETE" method="POST">
-                <button type="submit" class="btn btn-danger btn-sm text-white">delete</button>
+                <button type="submit" class="btn btn-danger btn-sm text-white m-1">delete</button>
               </form>
             </div>
           </div>
